body overflow fix

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -88,7 +88,7 @@ top:40px;
 }
 body{
   background-color: rgb(80,0,0);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 body p{
   color:white;
